add handle for image trainer
