# controller/trainerController.go
@@ -2,6 +2,10 @@ package controller
 
 import (
 	"errors"
+	"fmt"
+	"os"
+	"path/filepath"
+	"time"
 
 	"github.com/akramfirmansyah/jagona-gym/database"
 	"github.com/akramfirmansyah/jagona-gym/models"
@@ -14,12 +18,21 @@ import (
 //	@Summary		Create Trainer
 //	@Description	Creating new Trainer data
 //	@Tags			Trainer
-//	@Accept			json
+//	@Accept			mpfd
 //	@Produce		json
-//	@Param			body	body		models.TrainerBody	true	"Data trainer"
-//	@Success		200		{object}	models.Trainer		"Success create trainer"
-//	@Failure		400		{string}	string				"Bad Request"
-//	@Failure		500		{string}	string				"Internal Server Error"
+//
+//	@Param			name		formData	string			true	"Name trainer"
+//	@Param			nik			formData	string			true	"NIK trainer"
+//	@Param			birthday	formData	string			true	"Tanggal Lahir trainer"
+//	@Param			email		formData	string			true	"Email trainer"
+//	@Param			contact		formData	string			true	"Kontak trainer"
+//	@Param			address		formData	string			true	"Alamat trainer"
+//	@Param			gender		formData	string			true	"Gender trainer"
+//	@Param			image		formData	file			true	"Image trainer"
+//
+//	@Success		200			{object}	models.Trainer	"Success create trainer"
+//	@Failure		400			{string}	string			"Bad Request"
+//	@Failure		500			{string}	string			"Internal Server Error"
 //	@Router			/api/trainer [post]
 func CreateTrainer(c *fiber.Ctx) error {
 	body := new(models.TrainerBody)
@@ -28,14 +41,29 @@ func CreateTrainer(c *fiber.Ctx) error {
 		return c.Status(fiber.StatusBadRequest).SendString(err.Error())
 	}
 
+	file, err := c.FormFile("image")
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).SendString(err.Error())
+	}
+
+	// Generate unique filename
+	ext := filepath.Ext(file.Filename)
+	filename := fmt.Sprintf("%d%s", time.Now().UnixNano(), ext)
+
+	// Save file to disk
+	if err := c.SaveFile(file, fmt.Sprintf("public/trainer/%s", filename)); err != nil {
+		return c.Status(fiber.StatusInternalServerError).SendString(err.Error())
+	}
+
 	newTrainer := models.Trainer{
-		TrainerName:     body.TrainerName,
-		TrainerNIK:      body.TrainerNIK,
-		TrainerBirthday: body.TrainerBirthday,
-		TrainerEmail:    body.TrainerEmail,
-		TrainerContact:  body.TrainerContact,
-		TrainerAddress:  body.TrainerAddress,
-		TrainerGender:   body.TrainerGender,
+		Name:     body.Name,
+		NIK:      body.NIK,
+		Birthday: body.Birthday,
+		Email:    body.Email,
+		Contact:  body.Contact,
+		Address:  body.Address,
+		Gender:   body.Gender,
+		Image:    fmt.Sprintf("%s/images/trainer/%s", os.Getenv("BASE_URL"), filename),
 	}
 
 	if err := database.DB.Create(&newTrainer).Error; err != nil {
@@ -127,17 +155,17 @@ func UpdateTrainer(c *fiber.Ctx) error {
 
 	if errors.Is(result.Error, gorm.ErrRecordNotFound) {
 		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
-			"message": "Trainer not found",
+			"message": "Trainer not found!",
 		})
 	}
 
-	trainer.TrainerName = body.TrainerName
-	trainer.TrainerNIK = body.TrainerNIK
-	trainer.TrainerBirthday = body.TrainerBirthday
-	trainer.TrainerEmail = body.TrainerEmail
-	trainer.TrainerContact = body.TrainerContact
-	trainer.TrainerAddress = body.TrainerAddress
-	trainer.TrainerGender = body.TrainerGender
+	trainer.Name = body.Name
+	trainer.NIK = body.NIK
+	trainer.Birthday = body.Birthday
+	trainer.Email = body.Email
+	trainer.Contact = body.Contact
+	trainer.Address = body.Address
+	trainer.Gender = body.Gender
 
 	if err := database.DB.Model(&trainer).Updates(&trainer).Error; err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
