# docs/swagger.json
@@ -1,20 +1,49 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample swagger for Jagona Gym API",
+        "description": "This is a swagger for Jagona Gym API",
         "title": "Jagona Gym API",
         "contact": {
             "name": "API Support",
             "email": "akram.firman@gmail.com"
         },
-        "version": "1.0"
+        "version": "0.0.1"
     },
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
         "/api/member": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Member"
+                ],
+                "summary": "Get all members",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Member"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
             "post": {
-                "description": "Creating new member data",
+                "description": "Creating new Member data",
                 "consumes": [
                     "application/json"
                 ],
@@ -40,26 +69,160 @@
                     "200": {
                         "description": "Success create member",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Member"
-                            }
+                            "$ref": "#/definitions/models.Member"
                         }
                     },
                     "400": {
-                        "description": "ok",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "ok",
+                        "description": "Bad Request",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "ok",
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/member/{id}": {
+            "get": {
+                "description": "Get a single Member data by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Member"
+                ],
+                "summary": "Get a single Member",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Member ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Member"
+                        }
+                    },
+                    "404": {
+                        "description": "Member not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to get trainer",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update a specific Member data",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Member"
+                ],
+                "summary": "Update Member",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Member ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Update Member data",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.MemberBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Member"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Member not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete Member data by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Member"
+                ],
+                "summary": "Delete Member",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Member ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success Delete Member Data",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Data not Found!",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
                         }
@@ -100,7 +263,7 @@
             "post": {
                 "description": "Creating new Trainer data",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -111,13 +274,60 @@
                 "summary": "Create Trainer",
                 "parameters": [
                     {
-                        "description": "Data trainer",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.TrainerBody"
-                        }
+                        "type": "string",
+                        "description": "Name trainer",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "NIK trainer",
+                        "name": "nik",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Tanggal Lahir trainer",
+                        "name": "birthday",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Email trainer",
+                        "name": "email",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Kontak trainer",
+                        "name": "contact",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Alamat trainer",
+                        "name": "address",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Gender trainer",
+                        "name": "gender",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "Image trainer",
+                        "name": "image",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -381,14 +591,32 @@
         "models.Trainer": {
             "type": "object",
             "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "birthday": {
+                    "type": "string"
+                },
+                "contact": {
+                    "type": "string"
+                },
                 "createdAt": {
                     "type": "string"
                 },
                 "deletedAt": {
                     "$ref": "#/definitions/gorm.DeletedAt"
                 },
+                "email": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
+                },
+                "img_url": {
+                    "type": "string"
                 },
                 "members": {
                     "type": "array",
@@ -396,25 +624,10 @@
                         "$ref": "#/definitions/models.Member"
                     }
                 },
-                "trainer_address": {
+                "name": {
                     "type": "string"
                 },
-                "trainer_birthday": {
-                    "type": "string"
-                },
-                "trainer_contact": {
-                    "type": "string"
-                },
-                "trainer_email": {
-                    "type": "string"
-                },
-                "trainer_gender": {
-                    "type": "string"
-                },
-                "trainer_name": {
-                    "type": "string"
-                },
-                "trainer_nik": {
+                "nik": {
                     "type": "integer"
                 },
                 "updatedAt": {
@@ -425,25 +638,28 @@
         "models.TrainerBody": {
             "type": "object",
             "properties": {
-                "trainer_address": {
+                "address": {
                     "type": "string"
                 },
-                "trainer_birthday": {
+                "birthday": {
                     "type": "string"
                 },
-                "trainer_contact": {
+                "contact": {
                     "type": "string"
                 },
-                "trainer_email": {
+                "email": {
                     "type": "string"
                 },
-                "trainer_gender": {
+                "gender": {
                     "type": "string"
                 },
-                "trainer_name": {
+                "image": {
                     "type": "string"
                 },
-                "trainer_nik": {
+                "name": {
+                    "type": "string"
+                },
+                "nik": {
                     "type": "integer"
                 }
             }
