# models/trainerModel.go
@@ -4,22 +4,24 @@ import "gorm.io/gorm"
 
 type Trainer struct {
 	gorm.Model
-	TrainerName     string   `gorm:"index;size:255" json:"trainer_name"`
-	TrainerNIK      uint     `json:"trainer_nik"`
-	TrainerBirthday string   `json:"trainer_birthday"`
-	TrainerEmail    string   `gorm:"uniqueIndex;size:255" json:"trainer_email"`
-	TrainerContact  string   `json:"trainer_contact"`
-	TrainerAddress  string   `json:"trainer_address"`
-	TrainerGender   string   `json:"trainer_gender"`
-	Members         []Member `gorm:"foreignKey:TrainerID" json:"members"`
+	Name     string   `gorm:"index;size:255" json:"name"`
+	NIK      uint     `json:"nik"`
+	Birthday string   `json:"birthday"`
+	Email    string   `gorm:"uniqueIndex;size:255" json:"email"`
+	Contact  string   `json:"contact"`
+	Address  string   `json:"address"`
+	Gender   string   `json:"gender"`
+	Image    string   `json:"img_url"`
+	Members  []Member `gorm:"foreignKey:TrainerID" json:"members"`
 }
 
 type TrainerBody struct {
-	TrainerName     string `json:"trainer_name"`
-	TrainerNIK      uint   `json:"trainer_nik"`
-	TrainerBirthday string `json:"trainer_birthday"`
-	TrainerEmail    string `json:"trainer_email"`
-	TrainerContact  string `json:"trainer_contact"`
-	TrainerAddress  string `json:"trainer_address"`
-	TrainerGender   string `json:"trainer_gender"`
+	Name     string `form:"name"`
+	NIK      uint   `form:"nik"`
+	Birthday string `form:"birthday"`
+	Email    string `form:"email"`
+	Contact  string `form:"contact"`
+	Address  string `form:"address"`
+	Gender   string `form:"gender"`
+	Image    string `form:"image"`
 }
